--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,50 @@
-.App {
-  text-align: center;
+body {
+  background: #2980B9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-size: 1.5em;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.calcWrapper {
+  background-color: gray;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: row wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-content: center;
+  width: 300px;
+  height: 440px;
+  margin: 100px auto;
+  border: 1px solid gray;
+  border-radius: 5px;
+  -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.48);
+  -moz-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.48);
+  box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.48);
+}
+
+#display {
+  background: #16222A;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: white;
+  width: 100%;
+  height: 70px;
+  margin: 0 auto;
+  text-align: right;
+  padding: 10px;
+}
+
+.row {
+  width: 100%;
+  margin: auto;
+}
+
+#divide, #multiply, #add, #subtract, #clear {
+  background: #1488CC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#clear {
+  width: 100%;
 }
